aws/helm/ingress/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: <your-domain.com>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <your-service-name>
            port:
              number: 80
